--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.3.9",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "wepack": "^0.0.1"
+    "webpack-dev-server": "^3.11.2"
   }
 }
